# aio-agent

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  LICENSE  README.md  aio-agent.toml  plan.md  test.bat
docs/: technical-documentation.md
src/: interrupt.rs  lib.rs  main.rs
src/adapters/: adapter.rs  dingtalk.rs  discord.rs  feishu.rs  matrix.rs  mod.rs  qqbot.rs  signal.rs  slack.rs  teams.rs  telegram.rs  types.rs  webhook.rs  wecom.rs  whatsapp.rs
src/agent_engine/: mod.rs
src/agents/: mod.rs
src/api/: mod.rs
src/budget/: iteration.rs  mod.rs  tool_budget.rs
src/callbacks/: mod.rs
src/checkpoint/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/context/: compressor.rs  mod.rs  scrubber.rs
src/delegation/: manager.rs  mod.rs  types.rs
src/doctor/: mod.rs
src/errors/: classifier.rs  mod.rs  retry.rs  types.rs
src/gateway/: mod.rs
src/guardrails/: mod.rs
src/handoff/: mod.rs
src/human_in_loop/: mod.rs
src/interrupt/: mod.rs
src/lanes/: mod.rs
src/logging/: manager.rs  mod.rs
src/memory/: mod.rs  prefetch.rs  search.rs  tool_store.rs  trajectory.rs
src/messaging/: mod.rs
src/output_parser/: mod.rs
src/permissions/: mod.rs
src/providers/: manager.rs  mod.rs  types.rs
src/scheduler/: job.rs  mod.rs  scheduler.rs
src/setup/: mod.rs
src/skills/: mod.rs  permissions.rs
src/streaming/: mod.rs
src/tasks/: mod.rs
src/tools/: mod.rs
src/workflows/: mod.rs
tests/: api_test.rs  llm_provider.rs
