[package]
name = "aio-agent"
version = "1.3.0"
edition = "2021"
authors = ["AIO Agent Contributors"]
description = "All In One Agent - 集成化一站式AI Agent解决方案"
license = "MIT"
repository = "https://github.com/aio-agent/aio-agent"
keywords = ["ai", "agent", "llm", "automation", "tool-use"]
categories = ["artificial-intelligence"]

[[bin]]
name = "aio-agent"
path = "src/main.rs"

[[bin]]
name = "aio-agent-test"
path = "src/bin/agent-test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
async-stream = "0.3"
url = "2"
glob = "0.3"
dirs-next = "2"
base64 = "0.21"
toml = "0.8"
sha2 = "0.10"
md-5 = "0.10"
num_cpus = "1"
hostname = "0.3"
walkdir = "2"
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
crossterm = "0.27"
indicatif = "0.17"
rand = "0.8"
fastrand = "2"
headless_chrome = "1.0"
hmac = "0.12"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
